--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-entry/parcel-entry.component.html
@@ -1,17 +1,18 @@
 <div class="container">
-  <div class="type">
-    <h6>Select ownership type:</h6>
-    <div class="warning">
-      The answer to the following question will change the rest of the application form. Do not change this answer once
-      selected.
-    </div>
-    <mat-radio-group class="radio-row" aria-label="Select a parcel type">
-      <mat-radio-button value="fee">Fee Simple</mat-radio-button>
-      <mat-radio-button value="crown">Crown</mat-radio-button>
-    </mat-radio-group>
-  </div>
-  <h5>Parcel Lookup</h5>
   <form [formGroup]="parcelForm">
+    <div class="type">
+      <h6>Select ownership type:</h6>
+      <div class="warning">
+        The answer to the following question will change the rest of the application form. Do not change this answer
+        once selected.
+      </div>
+      <mat-radio-group class="radio-row" aria-label="Select a parcel type">
+        <mat-radio-button value="fee">Fee Simple</mat-radio-button>
+        <mat-radio-button value="crown">Crown</mat-radio-button>
+      </mat-radio-group>
+    </div>
+
+    <h5>Parcel Lookup</h5>
     <div class="form-row">
       <div class="full-row pmbc-search">
         <label for="pid">Enter PID (and/or PIN for Crown Land) to auto-fill parcel details</label>
@@ -32,6 +33,7 @@
         </div>
         <span class="float-right">Powered by PMBC!</span>
       </div>
+
       <div class="full-row">
         <label for="legal-description">Legal Description</label>
         <mat-form-field class="full-width-input" appearance="outline">
@@ -43,18 +45,21 @@
           />
         </mat-form-field>
       </div>
+
       <div>
         <label for="map-area">Approx. Map Area (Hectares)</label>
         <mat-form-field class="full-width-input" appearance="outline">
           <input id="map-area" type="number" matInput placeholder="Enter parcel size" formControlName="mapArea" />
         </mat-form-field>
       </div>
+
       <div>
         <label for="pin">PID</label>
         <mat-form-field class="full-width-input" appearance="outline">
           <input id="pid" type="number" matInput placeholder="Enter PID" formControlName="pid" />
         </mat-form-field>
       </div>
+
       <div>
         <label for="pin">PIN</label>
         <mat-form-field class="full-width-input" appearance="outline">
