Add expansion of panels that have errors
* Allow isAuthorized null if no ocp or zoning

--- a/portal-frontend/src/app/features/review-application/review-submit/review-submit.component.html
+++ b/portal-frontend/src/app/features/review-application/review-submit/review-submit.component.html
@@ -3,7 +3,7 @@
   <div class="description">
     <div>Complete Local government review and submit to ALC</div>
   </div>
-  <div *ngIf="_applicationReview" class="mobile-hidden">
+  <div *ngIf="_applicationReview && !isMobile" class="mobile-hidden">
     <section>
       <h4>1. Contact Information</h4>
       <div class="review-table">
@@ -68,7 +68,9 @@
         <div class="full-width">
           <div class="subheading2">Is the application parcel(s) subject to a Local Government OCP designation?</div>
           <div>
-            {{ _applicationReview.isOCPDesignation ? 'Yes' : 'No' }}
+            <span *ngIf="_applicationReview.isOCPDesignation !== null">{{
+              _applicationReview.isOCPDesignation ? 'Yes' : 'No'
+            }}</span>
             <app-no-data
               [showRequired]="showErrors"
               *ngIf="!_applicationReview.isOCPDesignation === null"
@@ -92,7 +94,9 @@
         <div *ngIf="_applicationReview.isOCPDesignation">
           <div class="subheading2">Is this proposal consistent with the current OCP designation?</div>
           <div>
-            {{ _applicationReview.OCPConsistent ? 'Yes' : 'No' }}
+            <span *ngIf="_applicationReview.OCPConsistent !== null">{{
+              _applicationReview.OCPConsistent ? 'Yes' : 'No'
+            }}</span>
             <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.OCPConsistent === null"></app-no-data>
           </div>
         </div>
@@ -107,7 +111,9 @@
         <div class="full-width">
           <div class="subheading2">Is the application parcel(s) subject to a Local Government zoning designation?</div>
           <div>
-            {{ _applicationReview.isSubjectToZoning ? 'Yes' : 'No' }}
+            <span *ngIf="_applicationReview.isSubjectToZoning !== null">{{
+              _applicationReview.isSubjectToZoning ? 'Yes' : 'No'
+            }}</span>
             <app-no-data
               [showRequired]="showErrors"
               *ngIf="!_applicationReview.isSubjectToZoning === null"
@@ -144,7 +150,9 @@
         <div *ngIf="_applicationReview.isSubjectToZoning">
           <div class="subheading2">Is this proposal consistent with the current zoning designation?</div>
           <div>
-            {{ _applicationReview.isZoningConsistent ? 'Yes' : 'No' }}
+            <span *ngIf="_applicationReview.isZoningConsistent !== null">{{
+              _applicationReview.isZoningConsistent ? 'Yes' : 'No'
+            }}</span>
             <app-no-data
               [showRequired]="showErrors"
               *ngIf="!_applicationReview.isZoningConsistent === null"
@@ -159,11 +167,18 @@
     <section>
       <h4>4. Resolution</h4>
       <div class="review-table">
-        <div class="full-width">
+        <div *ngIf="!_applicationReview.isOCPDesignation && !_applicationReview.isSubjectToZoning" class="full-width">
+          By indicating that the parcel(s) is not subject to Local Government OCP or Zoning, no authorizing resolution
+          is required as per S. 25 (3) or S. 29 (4) of the ALC Act. The only option available to you is to forward this
+          application on to the ALC.
+        </div>
+        <div *ngIf="_applicationReview.isOCPDesignation || _applicationReview.isSubjectToZoning" class="full-width">
           <div class="subheading2">Resolution for Application to Proceed to the ALC</div>
           <div>
-            {{ _applicationReview.isAuthorized ? 'Yes' : 'No' }}
-            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.isAuthorized === null"></app-no-data>
+            <span *ngIf="_applicationReview.isAuthorized !== null">{{
+              _applicationReview.isAuthorized ? 'Yes' : 'No'
+            }}</span>
+            <app-no-data [showRequired]="showErrors" *ngIf="_applicationReview.isAuthorized === null"></app-no-data>
           </div>
         </div>
         <div class="edit-button">
@@ -177,7 +192,9 @@
         <div>
           <div class="subheading2">Resolution Document</div>
           <div>
-            <a class="link" (click)="openFile(document.uuid)" *ngFor="let document of resolutionDocument">{{ document.fileName }}</a>
+            <a class="link" (click)="openFile(document.uuid)" *ngFor="let document of resolutionDocument">{{
+              document.fileName
+            }}</a>
             <app-no-data [showRequired]="showErrors" *ngIf="resolutionDocument.length === 0"></app-no-data>
           </div>
         </div>
@@ -204,114 +221,192 @@
       </div>
     </section>
   </div>
-  <div *ngIf="_applicationReview" class="tablet-hidden">
-    <mat-expansion-panel>
+  <div *ngIf="_applicationReview && isMobile" class="tablet-hidden">
+    <mat-expansion-panel #contactInfo>
       <mat-expansion-panel-header>
         <h4>1. Contact Information</h4>
       </mat-expansion-panel-header>
       <div class="review-table">
         <div>
           <div class="subheading2">Local Government File Number</div>
-          <div>{{ _applicationReview.localGovernmentFileNumber }}</div>
+          <div>
+            {{ _applicationReview.localGovernmentFileNumber }}
+            <app-no-data
+              [showRequired]="showErrors"
+              *ngIf="!_applicationReview.localGovernmentFileNumber"
+            ></app-no-data>
+          </div>
         </div>
         <div>
           <div class="subheading2">First Name</div>
-          <div>{{ _applicationReview.firstName }}</div>
+          <div>
+            {{ _applicationReview.firstName }}
+            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.firstName"></app-no-data>
+          </div>
         </div>
         <div>
           <div class="subheading2">Last Name</div>
-          <div>{{ _applicationReview.lastName }}</div>
+          <div>
+            {{ _applicationReview.lastName }}
+            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.lastName"></app-no-data>
+          </div>
         </div>
         <div>
           <div class="subheading2">Position</div>
-          <div>{{ _applicationReview.position }}</div>
+          <div>
+            {{ _applicationReview.position }}
+            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.position"></app-no-data>
+          </div>
         </div>
         <div>
           <div class="subheading2">Department</div>
-          <div>{{ _applicationReview.department }}</div>
+          <div>
+            {{ _applicationReview.department }}
+            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.department"></app-no-data>
+          </div>
         </div>
         <div>
           <div class="subheading2">Phone Number</div>
-          <div>{{ _applicationReview.phoneNumber }}</div>
+          <div>
+            {{ _applicationReview.phoneNumber }}
+            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.phoneNumber"></app-no-data>
+          </div>
         </div>
         <div>
           <div class="subheading2">Email</div>
-          <div>{{ _applicationReview.email }}</div>
+          <div>
+            {{ _applicationReview.email }}
+            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.email"></app-no-data>
+          </div>
         </div>
         <div class="edit-button">
           <button mat-flat-button (click)="onEditSection(0)" color="accent">Edit Section</button>
         </div>
       </div>
     </mat-expansion-panel>
-    <mat-expansion-panel>
+    <mat-expansion-panel #ocpInfo>
       <mat-expansion-panel-header>
         <h4>2. Plans & Bylaws: OCP</h4>
       </mat-expansion-panel-header>
       <div class="review-table">
         <div class="full-width">
           <div class="subheading2">Is the application parcel(s) subject to a Local Government OCP designation?</div>
-          <div>{{ _applicationReview.isOCPDesignation ? 'Yes' : 'No' }}</div>
+          <div>
+            <span *ngIf="_applicationReview.isOCPDesignation !== null">{{
+              _applicationReview.isOCPDesignation ? 'Yes' : 'No'
+            }}</span>
+            <app-no-data
+              [showRequired]="showErrors"
+              *ngIf="!_applicationReview.isOCPDesignation === null"
+            ></app-no-data>
+          </div>
         </div>
         <div *ngIf="_applicationReview.isOCPDesignation">
           <div class="subheading2">OCP Bylaw Name</div>
-          <div>{{ _applicationReview.OCPBylawName }}</div>
+          <div>
+            {{ _applicationReview.OCPBylawName }}
+            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.OCPBylawName"></app-no-data>
+          </div>
         </div>
         <div *ngIf="_applicationReview.isOCPDesignation">
           <div class="subheading2">OCP Designation</div>
-          <div>{{ _applicationReview.OCPDesignation }}</div>
+          <div>
+            {{ _applicationReview.OCPDesignation }}
+            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.OCPDesignation"></app-no-data>
+          </div>
         </div>
         <div *ngIf="_applicationReview.isOCPDesignation">
           <div class="subheading2">Is this proposal consistent with the current OCP designation?</div>
-          <div>{{ _applicationReview.OCPConsistent ? 'Yes' : 'No' }}</div>
+          <div>
+            <span *ngIf="_applicationReview.OCPConsistent !== null">{{
+              _applicationReview.OCPConsistent ? 'Yes' : 'No'
+            }}</span>
+            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.OCPConsistent === null"></app-no-data>
+          </div>
         </div>
         <div class="edit-button">
           <button mat-flat-button (click)="onEditSection(1)" color="accent">Edit Section</button>
         </div>
       </div>
     </mat-expansion-panel>
-    <mat-expansion-panel>
+    <mat-expansion-panel #zoningInfo>
       <mat-expansion-panel-header><h4>3. Plans & Bylaws: Zoning</h4></mat-expansion-panel-header>
       <div class="review-table">
         <div class="full-width">
           <div class="subheading2">Is the application parcel(s) subject to a Local Government zoning designation?</div>
-          <div>{{ _applicationReview.isSubjectToZoning ? 'Yes' : 'No' }}</div>
+          <div>
+            <span *ngIf="_applicationReview.isSubjectToZoning !== null">{{
+              _applicationReview.isSubjectToZoning ? 'Yes' : 'No'
+            }}</span>
+            <app-no-data
+              [showRequired]="showErrors"
+              *ngIf="!_applicationReview.isSubjectToZoning === null"
+            ></app-no-data>
+          </div>
         </div>
         <div *ngIf="_applicationReview.isSubjectToZoning">
           <div class="subheading2">Zoning Bylaw Name</div>
-          <div>{{ _applicationReview.zoningBylawName }}</div>
+          <div>
+            {{ _applicationReview.zoningBylawName }}
+            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.zoningBylawName"></app-no-data>
+          </div>
         </div>
         <div *ngIf="_applicationReview.isSubjectToZoning">
           <div class="subheading2">Zoning Designation</div>
-          <div>{{ _applicationReview.zoningDesignation }}</div>
+          <div>
+            {{ _applicationReview.zoningDesignation }}
+            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.zoningDesignation"></app-no-data>
+          </div>
         </div>
         <div *ngIf="_applicationReview.isSubjectToZoning">
           <div class="subheading2">Minimum Lot Size (hectares)</div>
-          <div>{{ _applicationReview.zoningMinimumLotSize }}</div>
+          <div>
+            {{ _applicationReview.zoningMinimumLotSize }}
+            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.zoningMinimumLotSize"></app-no-data>
+          </div>
         </div>
         <div *ngIf="_applicationReview.isSubjectToZoning">
           <div class="subheading2">Is this proposal consistent with the current zoning designation?</div>
-          <div>{{ _applicationReview.isZoningConsistent ? 'Yes' : 'No' }}</div>
+          <div>
+            <span *ngIf="_applicationReview.isZoningConsistent !== null">{{
+              _applicationReview.isZoningConsistent ? 'Yes' : 'No'
+            }}</span>
+            <app-no-data
+              [showRequired]="showErrors"
+              *ngIf="!_applicationReview.isZoningConsistent === null"
+            ></app-no-data>
+          </div>
         </div>
         <div class="edit-button">
           <button mat-flat-button (click)="onEditSection(2)" color="accent">Edit Section</button>
         </div>
       </div>
     </mat-expansion-panel>
-    <mat-expansion-panel>
+    <mat-expansion-panel #authorizationInfo>
       <mat-expansion-panel-header>
         <h4>4. Resolution</h4>
       </mat-expansion-panel-header>
       <div class="review-table">
-        <div class="full-width">
+        <div *ngIf="!_applicationReview.isOCPDesignation && !_applicationReview.isSubjectToZoning" class="full-width">
+          By indicating that the parcel(s) is not subject to Local Government OCP or Zoning, no authorizing resolution
+          is required as per S. 25 (3) or S. 29 (4) of the ALC Act. The only option available to you is to forward this
+          application on to the ALC.
+        </div>
+        <div *ngIf="_applicationReview.isOCPDesignation || _applicationReview.isSubjectToZoning" class="full-width">
           <div class="subheading2">Resolution for Application to Proceed to the ALC</div>
-          <div>{{ _applicationReview.isAuthorized ? 'Yes' : 'No' }}</div>
+          <div>
+            <span *ngIf="_applicationReview.isAuthorized !== null">{{
+              _applicationReview.isAuthorized ? 'Yes' : 'No'
+            }}</span>
+            <app-no-data [showRequired]="showErrors" *ngIf="_applicationReview.isAuthorized === null"></app-no-data>
+          </div>
         </div>
         <div class="edit-button">
           <button mat-flat-button (click)="onEditSection(3)" color="accent">Edit Section</button>
         </div>
       </div>
     </mat-expansion-panel>
-    <mat-expansion-panel>
+    <mat-expansion-panel #attachmentInfo>
       <mat-expansion-panel-header>
         <h4>4. Attachments</h4>
       </mat-expansion-panel-header>
@@ -319,7 +414,9 @@
         <div>
           <div class="subheading2">Resolution Document</div>
           <div>
-            <a class="link" (click)="openFile(document.uuid)" *ngFor="let document of resolutionDocument">{{ document.fileName }}</a>
+            <a class="link" (click)="openFile(document.uuid)" *ngFor="let document of resolutionDocument">{{
+              document.fileName
+            }}</a>
             <app-no-data [showRequired]="showErrors" *ngIf="resolutionDocument.length === 0"></app-no-data>
           </div>
         </div>
