--- a/portal-frontend/src/app/features/review-application/review-submit-fng/review-submit-fng.component.html
+++ b/portal-frontend/src/app/features/review-application/review-submit-fng/review-submit-fng.component.html
@@ -69,7 +69,7 @@
           <div class="subheading2">Resolution for Application to Proceed to the ALC</div>
           <div>
             {{ _applicationReview.isAuthorized ? 'Yes' : 'No' }}
-            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.isAuthorized === null"></app-no-data>
+            <app-no-data [showRequired]="showErrors" *ngIf="_applicationReview.isAuthorized === null"></app-no-data>
           </div>
         </div>
         <div class="edit-button">
@@ -104,59 +104,88 @@
     </section>
   </div>
   <div *ngIf="_applicationReview" class="tablet-hidden">
-    <mat-expansion-panel>
+    <mat-expansion-panel #contactInfo>
       <mat-expansion-panel-header>
         <h4>1. Contact Information</h4>
       </mat-expansion-panel-header>
       <div class="review-table">
         <div>
           <div class="subheading2">First Nation Government File Number</div>
-          <div>{{ _applicationReview.localGovernmentFileNumber }}</div>
+          <div>
+            {{ _applicationReview.localGovernmentFileNumber }}
+            <app-no-data
+              [showRequired]="showErrors"
+              *ngIf="!_applicationReview.localGovernmentFileNumber"
+            ></app-no-data>
+          </div>
         </div>
         <div>
           <div class="subheading2">First Name</div>
-          <div>{{ _applicationReview.firstName }}</div>
+          <div>
+            {{ _applicationReview.firstName }}
+            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.firstName"></app-no-data>
+          </div>
         </div>
         <div>
           <div class="subheading2">Last Name</div>
-          <div>{{ _applicationReview.lastName }}</div>
+          <div>
+            {{ _applicationReview.lastName }}
+            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.lastName"></app-no-data>
+          </div>
         </div>
         <div>
           <div class="subheading2">Position</div>
-          <div>{{ _applicationReview.position }}</div>
+          <div>
+            {{ _applicationReview.position }}
+            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.position"></app-no-data>
+          </div>
         </div>
         <div>
           <div class="subheading2">Department</div>
-          <div>{{ _applicationReview.department }}</div>
+          <div>
+            {{ _applicationReview.department }}
+            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.department"></app-no-data>
+          </div>
         </div>
         <div>
           <div class="subheading2">Phone Number</div>
-          <div>{{ _applicationReview.phoneNumber }}</div>
+          <div>
+            {{ _applicationReview.phoneNumber }}
+            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.phoneNumber"></app-no-data>
+          </div>
         </div>
         <div>
           <div class="subheading2">Email</div>
-          <div>{{ _applicationReview.email }}</div>
+          <div>
+            {{ _applicationReview.email }}
+            <app-no-data [showRequired]="showErrors" *ngIf="!_applicationReview.email"></app-no-data>
+          </div>
         </div>
         <div class="edit-button">
           <button mat-flat-button (click)="onEditSection(0)" color="accent">Edit Section</button>
         </div>
       </div>
     </mat-expansion-panel>
-    <mat-expansion-panel>
+    <mat-expansion-panel #resolutionInfo>
       <mat-expansion-panel-header>
         <h4>2. Resolution</h4>
       </mat-expansion-panel-header>
       <div class="review-table">
         <div class="full-width">
           <div class="subheading2">Resolution for Application to Proceed to the ALC</div>
-          <div>{{ _applicationReview.isAuthorized ? 'Yes' : 'No' }}</div>
+          <div>
+            <span *ngIf="_applicationReview.isAuthorized !== null">{{
+              _applicationReview.isAuthorized ? 'Yes' : 'No'
+            }}</span>
+            <app-no-data [showRequired]="showErrors" *ngIf="_applicationReview.isAuthorized === null"></app-no-data>
+          </div>
         </div>
         <div class="edit-button">
           <button mat-flat-button (click)="onEditSection(1)" color="accent">Edit Section</button>
         </div>
       </div>
     </mat-expansion-panel>
-    <mat-expansion-panel>
+    <mat-expansion-panel #attachmentInfo>
       <mat-expansion-panel-header>
         <h4>3. Attachments</h4>
       </mat-expansion-panel-header>
