--- a/portal-frontend/src/app/features/review-application/review-zoning/review-zoning.component.html
+++ b/portal-frontend/src/app/features/review-application/review-zoning/review-zoning.component.html
@@ -31,6 +31,12 @@
         </mat-form-field>
       </div>
       <div>
+        <label for="designation">Zoning Designation</label>
+        <mat-form-field class="input" appearance="outline">
+          <input id="designation" matInput placeholder="Type zoning designation" formControlName="zoningDesignation" />
+        </mat-form-field>
+      </div>
+      <div class="full-row">
         <label for="lot-size">Minimum Lot Size (hectares)</label>
         <mat-form-field class="input" appearance="outline">
           <input
