--- a/portal-frontend/src/app/features/home/application-list/application-list.component.html
+++ b/portal-frontend/src/app/features/home/application-list/application-list.component.html
@@ -32,16 +32,7 @@
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
         <td mat-cell *matCellDef="let row">
-          <div
-            class="label"
-            [ngClass]="{
-              'in-progress': row.status.code == applicationStatus.IN_PROGRESS,
-              'submitted-to-alc': row.status.code == applicationStatus.SUBMITTED_TO_ALC,
-              'submitted-to-lg': row.status.code == applicationStatus.SUBMITTED_TO_LG,
-              'in-review': row.status.code == applicationStatus.IN_REVIEW,
-              cancelled: row.status.code == applicationStatus.CANCELLED
-            }"
-          >
+          <div [className]="'label ' + statusToCssMap.get(row.status.code)">
             {{ row.status.label }}
           </div>
         </td>
