--- a/portal-frontend/src/app/features/review-application/review-application.component.html
+++ b/portal-frontend/src/app/features/review-application/review-application.component.html
@@ -1,6 +1,7 @@
 <ng-template #header>
   <div class="header">
     <h6 *ngIf="application">Application ID: {{ application.fileNumber }} | {{ application.type }}</h6>
+    <button (click)="onReturnApplication()" mat-flat-button color="accent">Return Application</button>
   </div>
 </ng-template>
 
