--- a/portal-frontend/src/app/features/review-application/review-application.component.scss
+++ b/portal-frontend/src/app/features/review-application/review-application.component.scss
@@ -2,6 +2,22 @@
 
 .header {
   margin: rem(24) 0;
+  display: flex;
+  flex-direction: column;
+
+  button {
+    margin-top: rem(8) !important;
+  }
+
+  @media screen and (min-width: $tabletBreakpoint) {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    button {
+      margin-top: 0 !important;;
+    }
+  }
 }
 
 :host::ng-deep {
