Add Agrologist Subtasks, User Role, and Home Page Component

--- a/alcs-frontend/src/app/features/board/subtasks/subtasks.component.html
+++ b/alcs-frontend/src/app/features/board/subtasks/subtasks.component.html
@@ -12,6 +12,7 @@
           <button mat-menu-item (click)="create('AUDT')" [disabled]="hasAuditSubtask">Audit</button>
         </span>
         <button mat-menu-item (click)="create('GIS')">GIS</button>
+        <button mat-menu-item (click)="create('AGRO')">Agrologist</button>
       </mat-menu>
     </div>
   </div>
