--- a/alcs-frontend/src/app/features/home/home.component.html
+++ b/alcs-frontend/src/app/features/home/home.component.html
@@ -14,4 +14,7 @@
   <div *ngIf="hasApplicationSpecialist">
     <app-audit-subtasks></app-audit-subtasks>
   </div>
+  <div *ngIf="hasAgrologist">
+    <app-agro-subtasks></app-agro-subtasks>
+  </div>
 </div>
