Upgrade Portal to Angular 15

--- a/portal-frontend/src/app/features/edit-application/change-application-type-dialog/change-application-type-dialog.component.scss
+++ b/portal-frontend/src/app/features/edit-application/change-application-type-dialog/change-application-type-dialog.component.scss
@@ -14,7 +14,7 @@
       padding-top: rem(8);
       cursor: pointer;
       display: flex;
-      justify-content: end;
+      justify-content: flex-end;
       color: $accent-color-dark;
     }
 
