--- a/portal-frontend/src/app/features/create-application-dialog/create-application-dialog.component.scss
+++ b/portal-frontend/src/app/features/create-application-dialog/create-application-dialog.component.scss
@@ -41,7 +41,7 @@
 
       cursor: pointer;
       display: flex;
-      justify-content: end;
+      justify-content: flex-end;
       color: $accent-color-dark;
     }
 
